--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently 'vite' \"nodemon ../server.js\"",
-    "build": "vite build",
+    "dev": "vite",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -23,6 +24,7 @@
     "react-hot-loader": "^4.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^5.0.1",
     "react-stripe-elements": "6.1.1",
     "request": "2.88.2",
     "stripe": "8.38.0"
